@@ -27,6 +27,7 @@ class CheckListWidget;
 
 #include "Array.hxx"
 #include "CartDebug.hxx"
+#include "DebuggerParser.hxx"
 #include "EditableWidget.hxx"
 
 /** RomListWidget */
@@ -34,8 +35,10 @@ class RomListWidget : public EditableWidget
 {
   public:
     enum {
-      kBPointChangedCmd  = 'RLbp',  // click on the checkbox for a breakpoint
+      kBPointChangedCmd  = 'RLbp',  // 'data' will be disassembly line number,
+                                    // 'id' will be the checkbox state
       kRomChangedCmd     = 'RLpr',  // 'data' will be disassembly line number
+                                    // 'id' will be the BaseFormat of the data
       kSetPCCmd          = 'STpc',  // 'data' will be disassembly line number
       kRuntoPCCmd        = 'RTpc',  // 'data' will be disassembly line number
       kDisassembleCmd    = 'REds',
@@ -99,6 +102,7 @@ class RomListWidget : public EditableWidget
     int  _selectedItem;
     int  _highlightedItem;
     bool _editMode;
+    BaseFormat _base;  // base used during editing
     StellaKey  _currentKeyDown;
 
     const CartDebug::Disassembly* myDisasm;
